# Silent-Face-Anti-Spoofing

./: pyproject.toml  requirements.txt
antispoofing/: anti_spoof_predict.py  default_config.py  train_main.py
antispoofing/data_io/: dataset_loader.py  transform.py
antispoofing/model_lib/: MultiFTNet.py
