[tool.poetry]
name = "face-anti-spoofing"
version = "0.1.0"
description = "Model for face antispoof wrapped to be package like."
authors = ["Gleb <maxwellgleb@gmail.com>"]
readme = "README.md"
packages = [{include = "antispoofing"}, {include = "resources"}]

[tool.poetry.dependencies]
python = "~3.10"
easydict = "^1.9"
numpy = "^1.24.0"
tqdm = "^4.31.1"
torchvision = "^0.12.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp310-cp310-linux_x86_64.whl" }
opencv_python = "~4.6.0.66"
Pillow = "^9.5.0"
tensorboardX = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
